# sherpa-mlx

./: .clang-tidy  .gitgignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/scripts/: generate_build_matrix.py
.github/workflows/: build-mlx-wheels-arm64.yaml  build.yaml  build_mlx_wheels.yaml  export-parakeet-tdt-0.6b-v2.yaml  export-parakeet-tdt_ctc-110m.yaml  export-sense-voice.yaml  export-spleeter.yaml  style_check.yaml  upload_models.yaml
cmake/: show-info.cmake
scripts/: check_style_cpplint.sh  utils.sh
scripts/nemo/: README.md
scripts/nemo/parakeet-tdt-0.6b-v2/: README.md  export.py  generate_tokens.py  run.sh  test.py
scripts/nemo/parakeet-tdt_ctc-110m/: export.py  export_ctc.py  generate_tokens.py  notes.md  run.sh  test.py  test_ctc.py
scripts/sense-voice/: .gitignore  export.py  model.py  run.sh  test.py
scripts/spleeter/: export.py  run.sh  test.py  torch_unet.py  unet.py
sherpa-mlx/csrc/: CMakeLists.txt  circular-buffer.cc  circular-buffer.h  file-utils.cc  file-utils.h  macros.h  parse-options.cc  parse-options.h  sherpa-mlx-vad.cc  silero-vad-model-config.cc  silero-vad-model-config.h  silero-vad-model.cc  silero-vad-model.h  text-utils.cc  text-utils.h  vad-model-config.cc  vad-model-config.h  vad-model.cc  vad-model.h  voice-activity-detector.cc  voice-activity-detector.h  wave-reader.cc  wave-reader.h  wave-writer.cc  wave-writer.h
