[project]
name = "sherpa-mlx"
version = "0.0.1"
authors = [
  { name="Daniel Povey", email="dpovey@gmail.com" },
]
description = "sherpa with mlx"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/k2-fsa/sherpa-mlx"
Issues = "https://github.com/k2-fsa/sherpa-mlx/issues"
